--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "react-scripts": "1.1.1"
   },
   "dependencies": {
+    "codemirror": "^5.36.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.2.0",
+    "react-codemirror2": "^4.2.1",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
