--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "redux": "^3.6.0",
     "redux-form": "^7.3.0",
     "redux-thunk": "^2.2.0",
-    "socket.io-client": "^2.0.4"
+    "socket.io-client": "^2.0.4",
+    "webrtc-adapter": "^6.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
