--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "redux": "^3.6.0",
     "redux-form": "^7.3.0",
     "redux-thunk": "^2.2.0",
-    "socket.io-client": "^2.0.4"
+    "socket.io-client": "^2.0.4",
+    "jquery": "^3.3.1",
+    "froala-editor": "^2.6.6",
+    "react-froala-wysiwyg": "2.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
