--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.2.0",
     "react-codemirror2": "^4.2.1",
     "react-dom": "^16.2.0",
+    "react-draft-wysiwyg": "^1.12.11",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
