--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "codemirror": "^5.36.0",
+    "draft-js": "^0.10.5",
     "jwt-decode": "^2.2.0",
     "react": "^16.2.0",
     "react-codemirror2": "^4.2.1",
