install react hamburger

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "jwt-decode": "^2.2.0",
     "react": "^16.2.0",
+    "react-burger-menu": "^2.3.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
