--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-draft-wysiwyg": "^1.12.11",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
+    "react-sketch": "^0.4.4",
     "redux": "^3.6.0",
     "redux-form": "^7.3.0",
     "redux-thunk": "^2.2.0",
