--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "react-scripts": "1.1.1"
   },
   "dependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
     "codemirror": "^5.36.0",
     "draft-js": "^0.10.5",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "jwt-decode": "^2.2.0",
+    "mocha": "^5.0.5",
     "react": "^16.2.0",
     "react-burger-menu": "^2.3.0",
     "react-codemirror2": "^4.2.1",
