--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "1.1.1"
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-15": "^1.0.5",
+    "react-scripts": "1.1.1",
+    "redux-mock-store": "^1.5.1"
   },
   "dependencies": {
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "codemirror": "^5.36.0",
     "draft-js": "^0.10.5",
-    "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "jwt-decode": "^2.2.0",
     "mocha": "^5.0.5",
