--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-15": "^1.0.5",
     "nyc": "^11.6.0",
-    "react-scripts": "1.1.1",
-    "redux-mock-store": "^1.5.1"
+    "react-scripts": "1.1.1"
   },
   "dependencies": {
     "chai": "^4.1.2",
