--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,17 @@
     }
   },
   "rules": {
+    "no-multiple-empty-lines": [
+       1, 
+       {
+         "max": 2, 
+         "maxEOF": 1
+       }
+    ],
+        
+    "no-useless-constructor": [
+      1
+    ],  
     "no-unused-vars": [
       1
     ],
