--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 language: node_js
 node_js: node
+after_success: npm run coverage
+
 cache:
   directories:
     - node_modules
+
 script:
-  - npm test
+- npm test -- --coverage
+
 env:
   - CI=true
   - REACT_APP_API_BASE_URL="https://mysterious-garden-51929.herokuapp.com"
