first test for code coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ deploy:
   script: netlify deploy -s $NETLIFY_SITE_ID -t $NETLIFY_ACCESS_TOKEN -p ./build
   skip_cleanup: true
   on:
-    branch: master
+    repo: RowdyRuffBoysINC/RRB-client
