--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "nyc react-scripts test --env=jsdom",
-    "coverage": "react-scripts test --env=jsdom --coverage",
-    "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls",
+    "coverage": "react-scripts test --env=jsdom nyc report --reporter=text-lcov | coveralls",
     "eject": "react-scripts eject"
   }
 }
