--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "nyc react-scripts test --env=jsdom",
-    "coverage": "react-scripts test --env=jsdom nyc report --reporter=text-lcov | coveralls",
+    "test": "react-scripts test --env=jsdom",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "eject": "react-scripts eject"
   }
 }
