--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
 language: node_js
 node_js: node
-after_success: npm run coverage
-
 cache:
   directories:
     - node_modules
 
 script:
-- npm test -- --coverage
+  - npm test
 
 env:
   - REACT_APP_API_BASE_URL="https://mysterious-garden-51929.herokuapp.com"
@@ -15,6 +13,9 @@ env:
 before_deploy:
   - npm install netlify-cli -g
   - npm run build
+
+after_success:
+  - npm run coverage
 
 deploy:
   provider: script
