fix accidentally deleted line

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom --coverage",
+    "coverage": "coveralls",
     "eject": "react-scripts eject"
   }
 }
