--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
     - node_modules
 
 script:
-  - npm test
+  - npm test --coverage
 
 env:
   - REACT_APP_API_BASE_URL="https://mysterious-garden-51929.herokuapp.com"
