--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "nyc react-scripts test .test.js --env=jsdom",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "eject": "react-scripts eject"
   }
 }
