--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^4.1.1",
     "react-sketch": "^0.4.4",
     "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.3.0",
     "redux-thunk": "^2.2.0",
     "socket.io-client": "^2.0.4",
