--- a/package.json
+++ b/package.json
@@ -5,25 +5,16 @@
   "devDependencies": {
     "coveralls": "^3.0.0",
     "enzyme": "^3.3.0",
-    "enzyme-adapter-react-15": "^1.0.5",
     "nyc": "^11.6.0",
     "react-scripts": "1.1.1"
   },
   "dependencies": {
-    "chai": "^4.1.2",
-    "chai-http": "^4.0.0",
     "codemirror": "^5.36.0",
-    "draft-js": "^0.10.5",
     "enzyme-adapter-react-16": "^1.1.1",
-    "firebase": "^4.12.1",
-    "firepad": "^1.4.0",
     "jwt-decode": "^2.2.0",
-    "mocha": "^5.0.5",
     "react": "^16.2.0",
     "react-burger-menu": "^2.4.2",
-    "react-codemirror2": "^4.2.1",
     "react-dom": "^16.2.0",
-    "react-draft-wysiwyg": "^1.12.11",
     "react-redux": "^5.0.4",
     "react-router-dom": "^4.1.1",
     "react-sketch": "^0.4.4",
@@ -32,8 +23,7 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.3.0",
     "redux-thunk": "^2.2.0",
-    "socket.io-client": "^2.0.4",
-    "webrtc-adapter": "^6.1.4"
+    "socket.io-client": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
