chore: code cleanup

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -122,10 +122,10 @@
     "comma-dangle": [
       "error",
       {
-        "arrays": "always",
-        "objects": "always",
-        "imports": "always",
-        "exports": "always",
+        "arrays": "only-multiline",
+        "objects": "only-multiline",
+        "imports": "only-multiline",
+        "exports": "only-multiline",
         "functions": "ignore"
       }
     ],
