--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_deploy:
 
 deploy:
   provider: script
-  script: netlify deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_ACCESS_TOKEN --prod true --dir ./build
+  script: netlify deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_ACCESS_TOKEN --prod --dir ./build
   skip_cleanup: true
   on:
     repo: RowdyRuffBoysINC/RRB-client
